# rust-note

./: LICENSE  README-en.md  README.md  index.html  package.json  pnpm-lock.yaml  reasonix.toml
.claude/: settings.local.json
.codegraph/: daemon.pid
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs  workspace.rs
src-tauri/src/workspace/: backend.rs  local.rs  mod.rs  webdav.rs
src/components/: FileTreeNode.vue  Sidebar.vue  WebDavDialog.vue
src/composables/: useWorkspace.ts
